{
  "version": 4,
  "terraform_version": "1.9.0",
  "serial": 133,
  "lineage": "d8f9cc08-b84f-3dbb-bc45-8e66d0a8b069",
  "resources": [
    {
      "module": "module.aws_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335419572:security-group/sg-0e2b1247fa566256e",
            "description": "EC2 Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e2b1247fa566256e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec2-security-group",
            "name_prefix": "",
            "owner_id": "730335419572",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Dev-ec2-sg"
            },
            "tags_all": {
              "Name": "Dev-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-093f9040c8fe1fd26"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bd750fb7044e268e",
            "arn": "arn:aws:ec2:us-east-1:730335419572:elastic-ip/eipalloc-0bd750fb7044e268e",
            "domain": "vpc",
            "id": "eipalloc-0bd750fb7044e268e",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-199-146-202.compute-1.amazonaws.com",
            "public_ip": "44.199.146.202",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Dev-EIP"
            },
            "tags_all": {
              "Name": "Dev-EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335419572:internet-gateway/igw-0a9416162e772a48d",
            "id": "igw-0a9416162e772a48d",
            "owner_id": "730335419572",
            "tags": {
              "Name": "Dev-IGW"
            },
            "tags_all": {
              "Name": "Dev-IGW"
            },
            "vpc_id": "vpc-093f9040c8fe1fd26"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bd750fb7044e268e",
            "association_id": "eipassoc-0e089dd99406f1975",
            "connectivity_type": "public",
            "id": "nat-00dda65a3090eff61",
            "network_interface_id": "eni-0b8e36dd100f6568d",
            "private_ip": "192.168.1.49",
            "public_ip": "44.199.146.202",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08018f15ae5f9d5ac",
            "tags": {
              "Name": "Dev-NGW"
            },
            "tags_all": {
              "Name": "Dev-NGW"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_subnet.public_web_subnet_1_az1",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335419572:route-table/rtb-079c03f41f8b63866",
            "id": "rtb-079c03f41f8b63866",
            "owner_id": "730335419572",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00dda65a3090eff61",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Dev-Private-RT"
            },
            "tags_all": {
              "Name": "Dev-Private-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-093f9040c8fe1fd26"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_subnet.public_web_subnet_1_az1",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335419572:route-table/rtb-09b719d4db7259978",
            "id": "rtb-09b719d4db7259978",
            "owner_id": "730335419572",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a9416162e772a48d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Dev-Public-RT"
            },
            "tags_all": {
              "Name": "Dev-Public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-093f9040c8fe1fd26"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0739ee1d530b20052",
            "route_table_id": "rtb-079c03f41f8b63866",
            "subnet_id": "subnet-02df8e5e8955c3f2c"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_app_subnet_1_az1",
            "module.vpc.aws_subnet.public_web_subnet_1_az1",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e061e7070c69703f",
            "route_table_id": "rtb-079c03f41f8b63866",
            "subnet_id": "subnet-052134f50a49183c2"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_app_subnet_2_az2",
            "module.vpc.aws_subnet.public_web_subnet_1_az1",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_3_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0732f36d5076b1cc3",
            "route_table_id": "rtb-079c03f41f8b63866",
            "subnet_id": "subnet-06de58223b2856249"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_data_subnet_1_az1",
            "module.vpc.aws_subnet.public_web_subnet_1_az1",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_4_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0833b8c3f26d6a889",
            "route_table_id": "rtb-079c03f41f8b63866",
            "subnet_id": "subnet-00dd78d03290b3feb"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_data_subnet_2_az2",
            "module.vpc.aws_subnet.public_web_subnet_1_az1",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-044096bbd5c14a9a8",
            "route_table_id": "rtb-09b719d4db7259978",
            "subnet_id": "subnet-08018f15ae5f9d5ac"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_web_subnet_1_az1",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-082a1290814299f66",
            "route_table_id": "rtb-09b719d4db7259978",
            "subnet_id": "subnet-037a74764b4efbcc3"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_web_subnet_2_az2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_subnet_1_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335419572:subnet/subnet-02df8e5e8955c3f2c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02df8e5e8955c3f2c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335419572",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Dev-Private-Subnet-App-1"
            },
            "tags_all": {
              "Name": "Dev-Private-Subnet-App-1"
            },
            "vpc_id": "vpc-093f9040c8fe1fd26"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_subnet_2_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335419572:subnet/subnet-052134f50a49183c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052134f50a49183c2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335419572",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Dev-Private-Subnet-App-2"
            },
            "tags_all": {
              "Name": "Dev-Private-Subnet-App-2"
            },
            "vpc_id": "vpc-093f9040c8fe1fd26"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_data_subnet_1_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335419572:subnet/subnet-06de58223b2856249",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06de58223b2856249",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335419572",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Dev-Private-Subnet-DB-1"
            },
            "tags_all": {
              "Name": "Dev-Private-Subnet-DB-1"
            },
            "vpc_id": "vpc-093f9040c8fe1fd26"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_data_subnet_2_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335419572:subnet/subnet-00dd78d03290b3feb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00dd78d03290b3feb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335419572",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Dev-Private-Subnet-DB-2"
            },
            "tags_all": {
              "Name": "Dev-Private-Subnet-DB-2"
            },
            "vpc_id": "vpc-093f9040c8fe1fd26"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_web_subnet_1_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335419572:subnet/subnet-08018f15ae5f9d5ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08018f15ae5f9d5ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730335419572",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Dev-Public-Subnet-Web-1"
            },
            "tags_all": {
              "Name": "Dev-Public-Subnet-Web-1"
            },
            "vpc_id": "vpc-093f9040c8fe1fd26"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_web_subnet_2_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335419572:subnet/subnet-037a74764b4efbcc3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-037a74764b4efbcc3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730335419572",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Dev-Public-Subnet-Web-2"
            },
            "tags_all": {
              "Name": "Dev-Public-Subnet-Web-2"
            },
            "vpc_id": "vpc-093f9040c8fe1fd26"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335419572:vpc/vpc-093f9040c8fe1fd26",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-01b891f8201479e9d",
            "default_route_table_id": "rtb-09f9046d1145023f4",
            "default_security_group_id": "sg-0672658a34d1a2cd4",
            "dhcp_options_id": "dopt-0f29ba71951aaf7d0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-093f9040c8fe1fd26",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09f9046d1145023f4",
            "owner_id": "730335419572",
            "tags": {
              "Name": "Dev-VPC"
            },
            "tags_all": {
              "Name": "Dev-VPC"
            }
          }
        }
      ]
    }
  ]
}